fail_crate/tests/default_and_into.stderr
error: `default` cannot be combined with `into` in field `#[new(...)]`.
 --> fail_crate/tests/default_and_into.rs:5:5
  |
5 | /     #[new(default, into)]
6 | |     x: u32
  | |__________^
